--- a/config.toml
+++ b/config.toml
@@ -54,7 +54,7 @@ googleAnalytics = "YOUR GOOGLE ANALYTICS CODE"
 logo = "images/site-navigation/logo.png"
 
 [params.address]
-address = "Hamburg, Germany"
+address = "Heidelberg, Germany"
 email = "contact@aabsoo.com"
 phone = "+(49) 163 181 2981"
 
